@@ -1,27 +1,21 @@
 package com.github.scribejava.core.model;
 
-import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
-import org.junit.Before;
 import org.junit.Test;
-import java.net.MalformedURLException;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertArrayEquals;
 
 public class RequestTest {
 
-    private OAuthRequest getRequest;
-    private OAuthRequest postRequest;
-
-    @Before
-    public void setUp() throws MalformedURLException {
-        postRequest = new OAuthRequest(Verb.POST, "http://example.com");
+    @Test
+    public void shouldGetQueryStringParameters() {
+        final OAuthRequest postRequest = new OAuthRequest(Verb.POST, "http://example.com");
         postRequest.addBodyParameter("param", "value");
         postRequest.addBodyParameter("param with spaces", "value with spaces");
 
-        getRequest = new OAuthRequest(Verb.GET, "http://example.com?qsparam=value&other+param=value+with+spaces");
-    }
+        final OAuthRequest getRequest
+                = new OAuthRequest(Verb.GET, "http://example.com?qsparam=value&other+param=value+with+spaces");
 
-    @Test
-    public void shouldGetQueryStringParameters() {
         assertEquals(2, getRequest.getQueryStringParams().size());
         assertEquals(0, postRequest.getQueryStringParams().size());
         assertTrue(getRequest.getQueryStringParams().contains(new Parameter("qsparam", "value")));
@@ -29,12 +23,21 @@ public class RequestTest {
 
     @Test
     public void shouldSetBodyParamsAndAddContentLength() {
-        assertEquals("param=value&param with spaces=value with spaces", new String(postRequest.getByteArrayPayload()));
+        final OAuthRequest postRequest = new OAuthRequest(Verb.POST, "http://example.com");
+        postRequest.addBodyParameter("param", "value");
+        postRequest.addBodyParameter("param with spaces", "value with spaces");
+
+        assertEquals("param=value&param%20with%20spaces=value%20with%20spaces",
+                new String(postRequest.getByteArrayPayload()));
     }
 
     @Test
     public void shouldSetPayloadAndHeaders() {
+        final OAuthRequest postRequest = new OAuthRequest(Verb.POST, "http://example.com");
+        postRequest.addBodyParameter("param", "value");
+        postRequest.addBodyParameter("param with spaces", "value with spaces");
         postRequest.setPayload("PAYLOAD");
+
         assertEquals("PAYLOAD", postRequest.getStringPayload());
     }
 
@@ -56,6 +59,41 @@ public class RequestTest {
 
     @Test
     public void shouldHandleQueryStringSpaceEncodingProperly() {
+        final OAuthRequest getRequest
+                = new OAuthRequest(Verb.GET, "http://example.com?qsparam=value&other+param=value+with+spaces");
+
         assertTrue(getRequest.getQueryStringParams().contains(new Parameter("other param", "value with spaces")));
+    }
+
+    @Test
+    public void shouldNotEncodeInStringPayload() throws Exception {
+        final String requestBody = "~/!@#$%^&*( )_+//\r\n%2F&amp;";
+
+        final OAuthRequest postRequest = new OAuthRequest(Verb.POST, "http://example.com");
+        postRequest.setPayload(requestBody);
+
+        assertEquals(requestBody, postRequest.getStringPayload());
+    }
+
+    @Test
+    public void shouldNotEncodeInByteBodyPayload() throws Exception {
+        final byte[] requestBody = "~/!@#$%^&*( )_+//\r\n%2F&amp;".getBytes();
+
+        final OAuthRequest postRequest = new OAuthRequest(Verb.POST, "http://example.com");
+        postRequest.setPayload(requestBody);
+
+        assertArrayEquals(requestBody, postRequest.getByteArrayPayload());
+    }
+
+    @Test
+    public void shouldEncodeInBodyParamsPayload() throws Exception {
+        final String expectedRequestBodyParamName = "~/!@#$%^&*( )_+//\r\n%2F&amp;name";
+        final String expectedRequestBodyParamValue = "~/!@#$%^&*( )_+//\r\n%2F&amp;value";
+        final String expectedRequestBody = "~%2F%21%40%23%24%25%5E%26%2A%28%20%29_%2B%2F%2F%0D%0A%252F%26amp%3Bname="
+                + "~%2F%21%40%23%24%25%5E%26%2A%28%20%29_%2B%2F%2F%0D%0A%252F%26amp%3Bvalue";
+
+        final OAuthRequest postRequest = new OAuthRequest(Verb.POST, "http://example.com");
+        postRequest.addBodyParameter(expectedRequestBodyParamName, expectedRequestBodyParamValue);
+        assertArrayEquals(expectedRequestBody.getBytes(), postRequest.getByteArrayPayload());
     }
 }
